--- a/8/index.html
+++ b/8/index.html
@@ -30,6 +30,25 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero-section">
+        <div class="content">
+            <h1>find the right freelancer service, right away</h1>
+            <form action="" class="search-form">
+                <input type="text" placeholder="search for any service..." required>
+                <button class="material-symbols-outlined" type="submit">search</button>
+            </form>
+            <div class="popular-tags">
+                popular:
+                <ul class="tags">
+                    <li><a href="">website design</a></li>
+                    <li><a href="">logo design</a></li>
+                    <li><a href="">wordpress</a></li>
+                    <li><a href="">ai design</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
     
     <script src="function.js"></script>
 </body>
